--- a/src/faq.njk
+++ b/src/faq.njk
@@ -504,6 +504,26 @@
 		</div>
 	</div>
 </section>
+
+<section class="cta-section text-center py-5 d-flex align-items-center" style="min-height: 60vh">
+	<div class="container">
+		<h2 class="cta-title text-white fw-bold p-3">
+			Ready to take the next step?
+		</h2>
+		<p class="cta-text text-white mb-4 p-2">
+			Schedule a meeting with our Team to discuss how Mojo CFO can support your business’s financial
+			growth and stability.
+		</p>
+		<a href="https://forms.gle/HW7q5Bn8mr4QP6s3A" target="_blank" class="btn btn-primary btn-lg cta-btn">
+			Let's Have a Conversation
+			<svg class="ms-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 512" width="16"
+				height="16" fill="currentColor" aria-hidden="true">
+			</svg>
+		</a>
+	</div>
+</section>
+
+
 {% endblock %}
 
 {% block scripts %}
