--- a/src/pricing.njk
+++ b/src/pricing.njk
@@ -16,9 +16,10 @@
 					Pricing that fits your team
 				</h1>
 				<p class="lead mb-4" style="font-weight:400; font-size:1.25rem;">
-					Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo officia est, eaque
-					perspiciatis fugit consectetur quibusdam eligendi maiores harum exercitationem
-					adipisci! Aliquid officiis dolor alias?
+					Choose a pricing plan that scales with your ambitions. No hidden fees—just
+					transparent, flexible packages tailored to your team’s needs. Get started today
+					and
+					discover the perfect plan for growth.
 				</p>
 				<a href="#" class="btn hero-btn text-light btn-lg" style="font-size:1.25rem;">
 					Contact Us
